--- a/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/Base.lproj/Main_iPhone.storyboard
+++ b/bti8108.groupbjjm.diabetespass/bti8108.groupbjjm.diabetespass/Base.lproj/Main_iPhone.storyboard
@@ -522,8 +522,8 @@ mmHg</string>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KJF-0n-rPd">
-                                                    <rect key="frame" x="266" y="7" width="46" height="30"/>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KJF-0n-rPd">
+                                                    <rect key="frame" x="126" y="9" width="186" height="30"/>
                                                     <state key="normal" title="häufig">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
@@ -537,12 +537,12 @@ mmHg</string>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y7d-H8-gSW">
-                                                    <rect key="frame" x="0.0" y="-19" width="320" height="162"/>
+                                                    <rect key="frame" x="0.0" y="-43" width="320" height="162"/>
                                                 </pickerView>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="386" id="Qth-Sg-5pX">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="495" id="Qth-Sg-5pX">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qth-Sg-5pX" id="RUV-Bz-tLZ">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -557,25 +557,27 @@ mmHg</string>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Schema ändern" id="NkZ-Fp-3Lh">
-                        <barButtonItem key="backBarButtonItem" title="Zurück" id="vzc-2e-4sD"/>
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="OXs-Fe-fUZ">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="e5x-Nz-3PH">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="KnA-gs-PkS">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="V67-XR-AI9">
                                 <rect key="frame" x="-23" y="-15" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Cancel">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="FoK-GG-ZTr" kind="unwind" unwindAction="unwindToSchemaView:" id="cmC-Ql-wvs"/>
+                                </connections>
                             </button>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="j2M-BT-2Rw">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="vqN-r5-oFj">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="tLA-u6-kDs">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="q4b-3O-JVg">
                                 <rect key="frame" x="-23" y="-15" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Sichern">
+                                <state key="normal" title="Save">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="changeButton:" destination="LlI-oT-L3E" eventType="touchUpInside" id="gnC-6l-ofV"/>
+                                    <segue destination="FoK-GG-ZTr" kind="unwind" unwindAction="unwindToSchemaView:" id="ZNi-J2-Rks"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -585,13 +587,14 @@ mmHg</string>
                         <outlet property="defaultSchemePicker" destination="y7d-H8-gSW" id="rCw-w9-0yT"/>
                         <outlet property="intervallCell" destination="RZ6-lg-bFI" id="fYS-Ib-l8F"/>
                         <outlet property="intervallPickerCell" destination="NbR-Oo-EUo" id="TBu-sM-N85"/>
-                        <outlet property="saveButton" destination="vqN-r5-oFj" id="Dat-VS-zRt"/>
+                        <outlet property="saveButton" destination="q4b-3O-JVg" id="yTQ-sB-UK8"/>
                         <outlet property="schemaViewCell" destination="RUV-Bz-tLZ" id="eCO-MP-25Y"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dsj-f7-xL2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="FoK-GG-ZTr" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1768" y="988"/>
+            <point key="canvasLocation" x="1768" y="986"/>
         </scene>
         <!--Schema-->
         <scene sceneID="aD3-PN-fPe">
